@@ -1,3 +1,7 @@
+2012-04-02 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpz/bin_uiui.c: New "basecase" code (by Torbjorn).
+
 2012-04-05  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/powerpc64/p7/popcount.asm: Properly extend arg n for mode32.
